[package]
name = "nita-security"
version = "0.1.0"
edition = "2021"
description = "Security primitives for the Nita RT-KNITS dashboard (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
